recursion.lessons.recursion.koch.Koch.scala.error
Koch:2: error: ':' expected but ',' found.
def snowFlake(levels, length){
                    ^Koch:26: error: identifier expected but '}' found.
} 
^Koch:29: error: expected start of definition
	override def run() {
                 ^Koch:32: error: Unmatched closing brace '}' ignored here
}
^